--- a/算法练习.md
+++ b/算法练习.md
@@ -1,3 +1,7 @@
+**题目来源**
+
+来源：[力扣（LeetCode）](https://leetcode-cn.com/)
+
 # 简单
 
 ## 1.两数之和
@@ -37,6 +41,78 @@ class Solution {
             }
         }
         return result;
+    }
+}
+```
+
+## 2.[整数反转](https://leetcode-cn.com/problems/reverse-integer/)
+
+**描述**
+
+给出一个 32 位的有符号整数，你需要将这个整数中每位上的数字进行反转。
+
+**示例**
+
+示例 1:
+
+输入: 123
+输出: 321
+示例 2:
+
+输入: -123
+输出: -321
+示例 3:
+
+输入: 120
+输出: 21
+
+**注意:**
+
+假设我们的环境只能存储得下 32 位的有符号整数，则其数值范围为 [−231,  231 − 1]。请根据这个假设，如果反转后整数溢出那么就返回 0。
+
+**答案**
+
+```java
+// 题解1
+class Solution {
+    public int reverse(int x) {
+        int res = 0;
+        int tmp = 0;
+        while(x != 0){
+            tmp = x % 10;
+            /* 
+            * Integer.MAX_VALUE=2147483647,Integer.MIN_VALUE=-2147483648
+            * 当前结果比最大值/10 还要大, 就说明之后*10会溢出, 返回0
+            * 当前结果等于最大值/10, 并且下一位数tmp大于7, 就说明*10+tmp会溢出, 返回0
+            * 负数同理
+            */
+            if(res > Integer.MAX_VALUE / 10 || (res == Integer.MAX_VALUE / 10 && tmp > 7)){
+                return 0;
+            }
+            if(res < Integer.MIN_VALUE / 10 || (res == Integer.MIN_VALUE / 10 && tmp < -8)){ 
+                return 0;
+            }
+            res = res * 10 + tmp;
+            x = x / 10; 
+        }
+        return res;
+    }
+}
+// 题解2
+class Solution {
+    public int reverse(int x) {
+        // 生命long类型的变量, 会保证计算结果超出int类型范围时, 数据是正确的
+        long res = 0;
+        int tmp = 0;
+        while(x != 0){
+            res = res * 10 + x % 10;
+            x = x / 10; 
+        }
+        if(res > Integer.MAX_VALUE || res < Integer.MIN_VALUE){
+            return 0;
+        }
+        // 返回时, 强转为int类型
+        return (int)res;
     }
 }
 ```
