--- a/算法练习.md
+++ b/算法练习.md
@@ -19,7 +19,7 @@
 因为 nums[0] + nums[1] = 2 + 7 = 9
 所以返回 [0, 1]
 
-**答案**
+**题解**
 
 ```java
 class Solution {
@@ -70,7 +70,7 @@ class Solution {
 
 假设我们的环境只能存储得下 32 位的有符号整数，则其数值范围为 [−231,  231 − 1]。请根据这个假设，如果反转后整数溢出那么就返回 0。
 
-**答案**
+**题解**
 
 ```java
 // 题解1
@@ -116,3 +116,52 @@ class Solution {
     }
 }
 ```
+
+## 3.[回文数](https://leetcode-cn.com/problems/palindrome-number/)
+
+**描述**
+
+判断一个整数是否是回文数。回文数是指正序（从左向右）和倒序（从右向左）读都是一样的整数。
+
+**示例**
+
+示例 1:
+
+输入: 121
+输出: true
+示例 2:
+
+输入: -121
+输出: false
+解释: 从左向右读, 为 -121 。 从右向左读, 为 121- 。因此它不是一个回文数。
+示例 3:
+
+输入: 10
+输出: false
+解释: 从右向左读, 为 01 。因此它不是一个回文数。
+
+**题解**
+
+```java
+class Solution {
+    public boolean isPalindrome(int x) {
+        // 小于0的数一定不是回文数
+        // 尾数是0, 单不是零的数, 也不是回文数
+        if(x < 0 || (x % 10 == 0 && x != 0)){
+            return false;
+        }
+        int res = 0;
+        // 将数字的一半进行反转
+        // 每循环一次, x缩小一位, res放大一位, x<=0时, 说明已反转一半 
+        while(x > res){
+            res = res * 10 + x % 10;
+            x = x / 10;
+        }
+        // 反转的结果与原数相同,时回文数
+        // 当数字位数是奇数位, 翻转一半后, 整个数字最中间的那位数, 会在res末尾, res会比x多一位
+        // 所以要去掉末尾这一位进行比较
+        return res == x || x == res/10;
+    }
+}
+```
+
