--- a/面试/面试题.md
+++ b/面试/面试题.md
@@ -34,7 +34,7 @@
 
     本地接口库用于调用操作系统的本地方法库完成具体的指令操作
 
-![JVM组成](..\imgs\JVM组成.png)
+![JVM组成](..\imgs\面试\JVM组成.png)
 
 - **Java程序的运行过程**
   - Java源文件被编译为字节码文件
