--- a/面试/算法练习.md
+++ b/面试/算法练习.md
@@ -1,6 +1,6 @@
 **题目来源**
 
-来源：[力扣（LeetCode）](https://leetcode-cn.com/)
+[力扣（LeetCode）](https://leetcode-cn.com/)
 
 # 简单
 
@@ -161,6 +161,252 @@ class Solution {
         // 当数字位数是奇数位, 翻转一半后, 整个数字最中间的那位数, 会在res末尾, res会比x多一位
         // 所以要去掉末尾这一位进行比较
         return res == x || x == res/10;
+    }
+}
+```
+
+## 4.[罗马数字转整数](https://leetcode-cn.com/problems/roman-to-integer/)
+
+**描述**
+
+罗马数字包含以下七种字符: I， V， X， L，C，D 和 M。
+
+字符          数值
+I                  1
+V                5
+X               10
+L                50
+C              100
+D               500
+M             1000
+例如， 罗马数字 2 写做 II ，即为两个并列的 1。12 写做 XII ，即为 X + II 。 27 写做  XXVII, 即为 XX + V + II 。
+
+通常情况下，罗马数字中小的数字在大的数字的右边。但也存在特例，例如 4 不写做 IIII，而是 IV。数字 1 在数字 5 的左边，所表示的数等于大数 5 减小数 1 得到的数值 4 。同样地，数字 9 表示为 IX。这个特殊的规则只适用于以下六种情况：
+
+I 可以放在 V (5) 和 X (10) 的左边，来表示 4 和 9。
+X 可以放在 L (50) 和 C (100) 的左边，来表示 40 和 90。 
+C 可以放在 D (500) 和 M (1000) 的左边，来表示 400 和 900。
+给定一个罗马数字，将其转换成整数。输入确保在 1 到 3999 的范围内。
+
+**示例**
+
+示例 1:
+
+输入: "III"
+输出: 3
+示例 2:
+
+输入: "IV"
+输出: 4
+示例 3:
+
+输入: "IX"
+输出: 9
+示例 4:
+
+输入: "LVIII"
+输出: 58
+解释: L = 50, V= 5, III = 3.
+示例 5:
+
+输入: "MCMXCIV"
+输出: 1994
+解释: M = 1000, CM = 900, XC = 90, IV = 4.
+
+**题解**
+
+```java
+class Solution {
+    /* 
+     *	罗马数字的规律是,  当前一个数小于后一个数时, 先减前一个数, 再加后一个数
+     *	例:  VIV 是 5-1+5 = 9
+    */
+    public int romanToInt(String s) {
+        int res = 0;
+        // 取出第一个数
+        int preNum = getValue(s.charAt(0));
+        // 循环从第二个数开始
+        for(int i=1; i<s.length(); i++){
+  		   // 取出第二个数
+            int num = getValue(s.charAt(i));
+            // 比较
+            if(preNum < num){
+                res -= preNum;
+            }else{
+                res += preNum;
+            }
+            preNum = num;
+        }
+        res += preNum;
+        return res;
+    }
+
+    private int getValue(char ch) {
+        switch(ch) {
+            case 'I': return 1;
+            case 'V': return 5;
+            case 'X': return 10;
+            case 'L': return 50;
+            case 'C': return 100;
+            case 'D': return 500;
+            case 'M': return 1000;
+            default: return 0;
+        }
+    }
+}
+```
+
+## 5.[最长公共前缀](https://leetcode-cn.com/problems/longest-common-prefix/)
+
+**描述**
+
+编写一个函数来查找字符串数组中的最长公共前缀。
+
+如果不存在公共前缀，返回空字符串 `""`。
+
+**示例**
+
+示例 1:
+
+输入: ["flower","flow","flight"]
+输出: "fl"
+示例 2:
+
+输入: ["dog","racecar","car"]
+输出: ""
+解释: 输入不存在公共前缀。
+
+**题解**
+
+```java
+// 取出第一个字符串, 在其他字符串中判断该字符串的位置, 如果为0, 说明是前缀, 进行下一个字符串的配置
+// 如果不为0, 将字符串截取掉末尾, 再次循环匹配
+class Solution {
+    public String longestCommonPrefix(String[] strs) {
+        if(strs.length == 0) return "";
+        String s = strs[0];
+        for(int i=1; i<strs.length; i++){
+            while(strs[i].indexOf(s) != 0){
+                s = s.substring(0, s.length()-1);
+                if(s.isEmpty()) return "";
+            }
+        }
+        return s;
+    }
+}
+
+// 遍历第一个字符串的每个字符, 与其他字符串的每个字符比较, 不相同就返回res, 全部相同字符与res相加
+class Solution {
+    public String longestCommonPrefix(String[] strs) {
+        String res = "";
+        if(strs.length != 0){
+            for(int i=0; i<strs[0].length(); i++){
+                char item = strs[0].charAt(i);
+                for(int j=1; j<strs.length; j++){
+                    String s = strs[j];
+                    if(i >= s.length() || item != s.charAt(i)){
+                        return res;
+                    }
+                }
+                res += item;
+            }
+        }
+        return res;
+    }
+}
+```
+
+## 6.[有效的括号](https://leetcode-cn.com/problems/valid-parentheses/)
+
+**描述**
+
+给定一个只包括 '('，')'，'{'，'}'，'['，']' 的字符串，判断字符串是否有效。
+
+有效字符串需满足：
+
+1. 左括号必须用相同类型的右括号闭合。
+2. 左括号必须以正确的顺序闭合。   
+
+注意空字符串可被认为是有效字符串。
+
+**示例**
+
+示例 1:
+
+输入: "()"
+输出: true
+示例 2:
+
+输入: "()[]{}"
+输出: true
+示例 3:
+
+输入: "(]"
+输出: false
+示例 4:
+
+输入: "([)]"
+输出: false
+示例 5:
+
+输入: "{[]}"
+输出: true
+
+**题解**
+
+```java
+class Solution {
+    public boolean isValid(String s) {
+        Map<Character, Character> map = new HashMap<>();
+        map.put(')', '(');
+        map.put('}', '{');
+        map.put(']', '[');
+        // 创建栈
+        Stack<Character> stack = new Stack<Character>();
+        for(int i=0; i<s.length(); i++){
+            char c = s.charAt(i);
+            // 判断当前字符是否包含在map的key中, 不在map中则说明, c是( { [, 添加到栈中
+            if(map.containsKey(c)){
+                // 从栈中取出栈顶元素
+                char tmp = stack.empty() ? '@' : stack.pop();
+                // 栈顶元素与当前map对应的value不相等时, 说明stack为空, 不匹配
+                if(tmp != map.get(c)){
+                    return false;
+                }
+            }else{
+                // 不包含在map中, 说明是(,{,[ 添加到队列中
+                stack.push(c);
+            }
+        }
+        // 判断栈是否为空
+        return stack.empty();
+    }
+}
+
+class Solution {
+    public boolean isValid(String s) {
+        List<Character> list = new ArrayList<>();
+        for(int i=0; i<s.length();i++){
+            // 取出字符
+            char c = s.charAt(i);
+            // 字符为({[是, 直接添加
+            if(c == '(' || c == '[' || c == '{' ){
+                list.add(c);
+                continue;
+            }
+            int size = list.size();
+            // 当list为空 或者字符为)}]并且与之对应的字符不是list最后的字符, 返回false
+            // 否则, 将list最后一位删除
+            if(size == 0 || (c == ')' && list.get(size-1) != '(')
+                || ( c == '}' && list.get(size-1) != '{' )
+                || ( c == ']' && list.get(size-1) != '[' )){
+                return false;
+            }else{
+                list.remove(size-1);
+            }
+        }
+        // 判断list是否为空
+        return list.size() == 0 ? true: false;
     }
 }
 ```
