--- a/面试/算法练习.md
+++ b/面试/算法练习.md
@@ -2,9 +2,9 @@
 
 [力扣（LeetCode）](https://leetcode-cn.com/)
 
-# 简单
+# 简单(1-100)
 
-## 1.两数之和
+## 1.[两数之和](https://leetcode-cn.com/problems/two-sum) 
 
 **描述**
 
@@ -14,12 +14,16 @@
 
 **示例**
 
+```
 给定 nums = [2, 7, 11, 15], target = 9
 
 因为 nums[0] + nums[1] = 2 + 7 = 9
 所以返回 [0, 1]
+```
 
 **题解**
+
+**Java**
 
 ```java
 class Solution {
@@ -55,22 +59,34 @@ class Solution {
 
 示例 1:
 
+```
 输入: 123
 输出: 321
+```
+
+
 示例 2:
 
+```
 输入: -123
 输出: -321
+```
+
+
 示例 3:
 
+```
 输入: 120
 输出: 21
+```
 
 **注意:**
 
 假设我们的环境只能存储得下 32 位的有符号整数，则其数值范围为 [−231,  231 − 1]。请根据这个假设，如果反转后整数溢出那么就返回 0。
 
 **题解**
+
+**Java**
 
 ```java
 // 题解1
@@ -127,20 +143,32 @@ class Solution {
 
 示例 1:
 
+```
 输入: 121
 输出: true
+```
+
+
 示例 2:
 
+```
 输入: -121
 输出: false
 解释: 从左向右读, 为 -121 。 从右向左读, 为 121- 。因此它不是一个回文数。
+```
+
+
 示例 3:
 
+```
 输入: 10
 输出: false
 解释: 从右向左读, 为 01 。因此它不是一个回文数。
+```
 
 **题解**
+
+**Java**
 
 ```java
 class Solution {
@@ -192,28 +220,48 @@ C 可以放在 D (500) 和 M (1000) 的左边，来表示 400 和 900。
 
 示例 1:
 
+```
 输入: "III"
 输出: 3
+```
+
+
 示例 2:
 
+```
 输入: "IV"
 输出: 4
+```
+
+
 示例 3:
 
+```
 输入: "IX"
 输出: 9
+```
+
+
 示例 4:
 
+```
 输入: "LVIII"
 输出: 58
 解释: L = 50, V= 5, III = 3.
+```
+
+
 示例 5:
 
+```
 输入: "MCMXCIV"
 输出: 1994
 解释: M = 1000, CM = 900, XC = 90, IV = 4.
+```
 
 **题解**
+
+**Java**
 
 ```java
 class Solution {
@@ -268,15 +316,23 @@ class Solution {
 
 示例 1:
 
+```
 输入: ["flower","flow","flight"]
 输出: "fl"
+```
+
+
 示例 2:
 
+```
 输入: ["dog","racecar","car"]
 输出: ""
 解释: 输入不存在公共前缀。
+```
 
 **题解**
+
+**Java**
 
 ```java
 // 取出第一个字符串, 在其他字符串中判断该字符串的位置, 如果为0, 说明是前缀, 进行下一个字符串的配置
@@ -333,26 +389,46 @@ class Solution {
 
 示例 1:
 
+```
 输入: "()"
 输出: true
+```
+
+
 示例 2:
 
+```
 输入: "()[]{}"
 输出: true
+```
+
+
 示例 3:
 
+```
 输入: "(]"
 输出: false
+```
+
+
 示例 4:
 
+```
 输入: "([)]"
 输出: false
+```
+
+
 示例 5:
 
+```
 输入: "{[]}"
 输出: true
+```
 
 **题解**
+
+**Java**
 
 ```java
 class Solution {
@@ -407,6 +483,397 @@ class Solution {
         }
         // 判断list是否为空
         return list.size() == 0 ? true: false;
+    }
+}
+```
+
+## 7.[合并两个有序链表](https://leetcode-cn.com/problems/merge-two-sorted-lists)  
+
+**描述**
+
+将两个升序链表合并为一个新的升序链表并返回。新链表是通过拼接给定的两个链表的所有节点组成的。 
+
+**示例**
+
+```
+输入：1->2->4, 1->3->4
+输出：1->1->2->3->4->4
+```
+
+**题解**
+
+**Java**
+
+```java
+/**
+ * Definition for singly-linked list.
+ * public class ListNode {
+ *     int val;
+ *     ListNode next;
+ *     ListNode(int x) { val = x; }
+ * }
+ */
+class Solution {
+    public ListNode mergeTwoLists(ListNode l1, ListNode l2) {
+        ListNode head = new ListNode(0);
+        ListNode result = head;
+        // 同时遍历两个链表, 直到其中一条链表遍历完毕
+        while(l1 != null && l2 != null){
+            // 比较两个链表当前的值的大小, 将较小的连到头节点后面
+            if(l1.val <= l2.val){
+                head.next = l1;
+                l1 = l1.next;
+            }else{
+                head.next = new ListNode(l2.val);
+                l2 = l2.next;
+            }
+            head = head.next;
+        }
+        // 判断l1链表是否遍历完, 如果l1为空, 说明l2不为空, 将l2接入, 反之接l1
+        head.next = l1 == null ? l2 : l1;
+        return result.next; 
+    }
+}
+```
+
+## 8.[删除排序数组中的重复项](https://leetcode-cn.com/problems/remove-duplicates-from-sorted-array/)
+
+**描述**
+
+给定一个排序数组，你需要在 原地 删除重复出现的元素，使得每个元素只出现一次，返回移除后数组的新长度。
+
+不要使用额外的数组空间，你必须在 原地 修改输入数组 并在使用 O(1) 额外空间的条件下完成。
+
+**示例**
+
+示例1
+
+```
+给定数组 nums = [1,1,2], 
+
+函数应该返回新的长度 2, 并且原数组 nums 的前两个元素被修改为 1, 2。 
+
+你不需要考虑数组中超出新长度后面的元素。
+```
+
+示例2
+
+```
+给定 nums = [0,0,1,1,1,2,2,3,3,4],
+
+函数应该返回新的长度 5, 并且原数组 nums 的前五个元素被修改为 0, 1, 2, 3, 4。
+
+你不需要考虑数组中超出新长度后面的元素。
+```
+
+**说明**
+
+为什么返回数值是整数，但输出的答案是数组呢?
+
+请注意，输入数组是以「引用」方式传递的，这意味着在函数里修改输入数组对于调用者是可见的。
+
+你可以想象内部操作如下:
+
+```java
+// nums 是以“引用”方式传递的。也就是说，不对实参做任何拷贝
+int len = removeDuplicates(nums);
+
+// 在函数里修改输入数组对于调用者是可见的。
+// 根据你的函数返回的长度, 它会打印出数组中该长度范围内的所有元素。
+for (int i = 0; i < len; i++) {
+    print(nums[i]);
+}
+```
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    public int removeDuplicates(int[] nums) {
+        int i = 0;
+        // 使用双指针, i为慢指针, j为快指针
+        for(int j=1; j<nums.length; j++){
+            // 当i与j指向的数字相同时, 直接进行下一次遍历, 直到不相同
+            // 当i与j指向的数字不相同, i指针指向下一个节点, 将j指向的数赋给i指向的数
+            if(nums[i] != nums[j]){
+                i++;
+                nums[i] = nums[j];
+            }
+        }
+        return i+1;
+    }
+}
+```
+
+## 9.[移除元素](https://leetcode-cn.com/problems/remove-element/)
+
+**描述**
+
+给你一个数组 nums 和一个值 val，你需要 原地 移除所有数值等于 val 的元素，并返回移除后数组的新长度。
+
+不要使用额外的数组空间，你必须仅使用 O(1) 额外空间并 原地 修改输入数组。
+
+元素的顺序可以改变。你不需要考虑数组中超出新长度后面的元素。
+
+**示例**
+
+示例1
+
+```
+给定 nums = [3,2,2,3], val = 3,
+
+函数应该返回新的长度 2, 并且 nums 中的前两个元素均为 2。
+
+你不需要考虑数组中超出新长度后面的元素。
+```
+
+示例2
+
+```
+给定 nums = [0,1,2,2,3,0,4,2], val = 2,
+
+函数应该返回新的长度 5, 并且 nums 中的前五个元素为 0, 1, 3, 0, 4。
+
+注意这五个元素可为任意顺序。
+
+你不需要考虑数组中超出新长度后面的元素。
+```
+
+**说明**
+
+为什么返回数值是整数，但输出的答案是数组呢?
+
+请注意，输入数组是以「引用」方式传递的，这意味着在函数里修改输入数组对于调用者是可见的。
+
+你可以想象内部操作如下:
+
+```java
+// nums 是以“引用”方式传递的。也就是说，不对实参做任何拷贝
+int len = removeDuplicates(nums);
+
+// 在函数里修改输入数组对于调用者是可见的。
+// 根据你的函数返回的长度, 它会打印出数组中该长度范围内的所有元素。
+for (int i = 0; i < len; i++) {
+    print(nums[i]);
+}
+```
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    public int removeElement(int[] nums, int val) {
+        int i = 0;
+        // 使用双指针
+        for(int j=0; j<nums.length; j++){
+            // 当j指向的数字是val时, 直接进行下一次遍历, 直到不相同
+            // 当j指向的数字不是val时, 将j指向的数赋给i指向的数, i指针指向下一个节点, 
+            if(nums[j] != val){
+                nums[i] = nums[j];
+                i++;
+            }
+        }
+        return i;
+    }
+}
+```
+
+## 10.[实现 strStr()](https://leetcode-cn.com/problems/implement-strstr/)
+
+**描述**
+
+实现 strStr() 函数。
+
+给定一个 haystack 字符串和一个 needle 字符串，在 haystack 字符串中找出 needle 字符串出现的第一个位置 (从0开始)。如果不存在，则返回  -1。
+
+**示例**
+
+示例1
+
+```
+输入: haystack = "hello", needle = "ll"
+输出: 2
+```
+
+示例2
+
+```
+输入: haystack = "aaaaa", needle = "bba"
+输出: -1
+```
+
+**说明**
+
+当 needle 是空字符串时，我们应当返回什么值呢？这是一个在面试中很好的问题。
+
+对于本题而言，当 needle 是空字符串时我们应当返回 0 。这与C语言的 strstr() 以及 Java的 indexOf() 定义相符。
+
+**题解**
+
+**Java**
+
+```java
+// 滑动窗口
+class Solution {
+    public int strStr(String haystack, String needle) {
+        int hlength = haystack.length();
+        int nlength = needle.length();
+        // 遍历次数为, haystack长度-needle长度+1
+        for(int start=0; start<=hlength-nlength; start++){
+            // 截取字符串与目标字符串进行比较
+            if(haystack.substring(start, start+nlength).equals(needle)){
+                return start;
+            }
+        }
+        return -1;
+    }
+}
+```
+
+## 11.[搜索插入位置](https://leetcode-cn.com/problems/search-insert-position/)
+
+**描述**
+
+给定一个排序数组和一个目标值，在数组中找到目标值，并返回其索引。如果目标值不存在于数组中，返回它将会被按顺序插入的位置。
+
+你可以假设数组中无重复元素。
+
+**示例**
+
+示例1
+
+```
+输入: [1,3,5,6], 5
+输出: 2
+```
+
+示例2
+
+```
+输入: [1,3,5,6], 2
+输出: 1
+```
+
+示例3
+
+```
+输入: [1,3,5,6], 7
+输出: 4
+```
+
+示例3
+
+```
+输入: [1,3,5,6], 0
+输出: 0
+```
+
+**说明**
+
+当 needle 是空字符串时，我们应当返回什么值呢？这是一个在面试中很好的问题。
+
+对于本题而言，当 needle 是空字符串时我们应当返回 0 。这与C语言的 strstr() 以及 Java的 indexOf() 定义相符。
+
+**题解**
+
+**Java**
+
+```java
+// 折半查找
+class Solution {
+    public int searchInsert(int[] nums, int target) {
+        int left = 0, right = nums.length - 1;
+        while(left <= right) {
+            int mid = (left + right) / 2;
+            if(nums[mid] == target) {
+                return mid;
+            } else if(nums[mid] < target) {
+                left = mid + 1;
+            } else {
+                right = mid - 1;
+            }
+        }
+        return left;
+    }
+}
+```
+
+## 12.[外观数列](https://leetcode-cn.com/problems/count-and-say/)
+
+**描述**
+
+「外观数列」是一个整数序列，从数字 1 开始，序列中的每一项都是对前一项的描述。前五项如下：
+
+```
+1.     1
+2.     11
+3.     21
+4.     1211
+5.     111221
+```
+
+1 被读作  "one 1"  ("一个一") , 即 11。
+11 被读作 "two 1s" ("两个一"）, 即 21。
+21 被读作 "one 2",  "one 1" （"一个二" ,  "一个一") , 即 1211。
+
+给定一个正整数 n（1 ≤ n ≤ 30），输出外观数列的第 n 项。
+
+注意：整数序列中的每一项将表示为一个字符串。
+
+**示例**
+
+示例1
+
+```
+输入: 1
+输出: "1"
+解释：这是一个基本样例。
+```
+
+示例2
+
+```
+输入: 4
+输出: "1211"
+解释：当 n = 3 时，序列是 "21"，其中我们有 "2" 和 "1" 两组，"2" 可以读作 "12"，也就是出现频次 = 1 而 值 = 2；类似 "1" 可以读作 "11"。所以答案是 "12" 和 "11" 组合在一起，也就是 "1211"。
+```
+
+**题解**
+
+**Java**
+
+```java
+// 递归
+class Solution {
+    public String  countAndSay(int n){
+        StringBuilder s = new StringBuilder();
+        int start = 0;
+        int i = 0;
+        if(n == 1){
+            return "1";
+        }
+        String str = countAndSay(n-1);
+        // 遍历字符串, 判断第一个字符与后面的字符是否相等
+        // 当不想等时, 不相等的字符串的索引, 减起始位置索引, 得到与起始字符相等的字符的数量
+        // 将数量和字符, 添加到StirngBuilder中
+        // 将起始位置变为不相等的字符的位置
+        for(i=1; i<str.length(); i++){
+            if(str.charAt(start) != str.charAt(i)){
+                int count = i - start;
+                s.append(count).append(str.charAt(start));
+                start = i;
+            }
+        }
+        // i != start 说明字符串末尾有多个相同的字符, 需要再加一遍
+        if(i != start){
+            int count = i - start;
+            s.append(count).append(str.charAt(start));
+        }
+        return s.toString();
     }
 }
 ```
