--- a/面试/算法练习.md
+++ b/面试/算法练习.md
@@ -878,3 +878,105 @@ class Solution {
 }
 ```
 
+## **13**.[最大子序和](https://leetcode-cn.com/problems/maximum-subarray/)
+
+**描述**
+
+给定一个整数数组 `nums` ，找到一个具有最大和的连续子数组（子数组最少包含一个元素），返回其最大和。
+
+```
+1.     1
+2.     11
+3.     21
+4.     1211
+5.     111221
+```
+
+1 被读作  "one 1"  ("一个一") , 即 11。
+11 被读作 "two 1s" ("两个一"）, 即 21。
+21 被读作 "one 2",  "one 1" （"一个二" ,  "一个一") , 即 1211。
+
+给定一个正整数 n（1 ≤ n ≤ 30），输出外观数列的第 n 项。
+
+注意：整数序列中的每一项将表示为一个字符串。
+
+**示例**
+
+示例1
+
+```
+输入: [-2,1,-3,4,-1,2,1,-5,4],
+输出: 6
+解释: 连续子数组 [4,-1,2,1] 的和最大，为 6。
+```
+
+**题解**
+
+**Java**
+
+```java
+// 动态规划
+class Solution {
+    public int maxSubArray(int[] nums) {
+        // 设置初始值
+        int result= nums[0];
+        // 临时存储累加的值
+        int tmp = 0;
+        for(int item : nums){
+            // 当tmp大于0时, 证明tmp为正数, 值得继续加值
+            // 当tmp小于等于0时, 舍弃掉当前值, 变为当前遍历的值
+            if(tmp>0){
+                tmp += item;
+            }else{
+                tmp = item;
+            }
+            // 比较tmp和result哪个大
+            result = result > tmp ? result : tmp;
+        }
+        return result;
+    }
+}
+```
+
+## 14.[最后一个单词的长度](https://leetcode-cn.com/problems/length-of-last-word/)
+
+**描述**
+
+给定一个仅包含大小写字母和空格 ' ' 的字符串 s，返回其最后一个单词的长度。如果字符串从左向右滚动显示，那么最后一个单词就是最后出现的单词。
+
+如果不存在最后一个单词，请返回 0 。
+
+说明：一个单词是指仅由字母组成、不包含任何空格字符的 最大子字符串。
+
+**示例**
+
+示例1
+
+```
+输入: "Hello World"
+输出: 5
+```
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    public int lengthOfLastWord(String s) {
+        int count = 0;
+        // 从后向前遍历
+        for(int i=s.length()-1; i>=0 ; i--){
+            // 不是空格, count++
+            // 是空格时, 并且count不等与0, 说明最后一个单词已遍历结束, break
+            if(s.charAt(i) == ' '){
+                if(count == 0) continue;
+                break;
+            }
+            count++;
+        }
+        return count;
+    }
+}
+```
+
