--- a/面试/算法练习.md
+++ b/面试/算法练习.md
@@ -980,3 +980,125 @@ class Solution {
 }
 ```
 
+## 15.[加一](https://leetcode-cn.com/problems/plus-one/)
+
+**描述**
+
+给定一个由整数组成的非空数组所表示的非负整数，在该数的基础上加一。
+
+最高位数字存放在数组的首位， 数组中每个元素只存储单个数字。
+
+你可以假设除了整数 0 之外，这个整数不会以零开头。
+
+**示例**
+
+示例1
+
+```
+输入: [1,2,3]
+输出: [1,2,4]
+解释: 输入数组表示数字 123。
+```
+
+示例2
+
+```
+输入: [4,3,2,1]
+输出: [4,3,2,2]
+解释: 输入数组表示数字 4321。
+```
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    public int[] plusOne(int[] digits) {
+        // 从后向前遍历
+        for (int i = digits.length - 1; i >= 0; i--) {
+            // 每个数字加一并对10取余
+            int tmp = (digits[i] + 1) % 10;
+            digits[i] = tmp;
+            // 判断是否为0, 为0相当于进位了, 执行下一次遍历
+            // 不等于0时, 说明无进位, 无需对后面的数字操作, 直接返回数组
+            if (tmp != 0) return digits;
+        }
+        // 走到这步, 说明数组遍历的最后一位进位超出数组长度, 创建新数组, 数组长度加1
+        digits = new int[digits.length + 1];
+        // 因为整个数组只有最后一位+1, 其他位为进位+1, 说明原数组每一位都是9
+        // 所以创建的新数组,只把第一位设置值为1
+        digits[0] = 1;
+        return digits;
+    }
+}
+```
+
+## 16.[二进制求和](https://leetcode-cn.com/problems/add-binary/)
+
+**描述**
+
+给你两个二进制字符串，返回它们的和（用二进制表示）。
+
+输入为 **非空** 字符串且只包含数字 `1` 和 `0`。
+
+**示例**
+
+示例1
+
+```
+输入: a = "11", b = "1"
+输出: "100"
+```
+
+示例2
+
+```
+输入: a = "1010", b = "1011"
+输出: "10101"
+```
+
+**提示**
+
+- 每个字符串仅由字符 '0' 或 '1' 组成。
+- 1 <= a.length, b.length <= 10^4
+- 字符串如果不是 "0" ，就都不含前导零。
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    // 整体思路, 取出每一位相加, 进位单独存放在tmp中
+    // 最后将加好的字符串取反
+    public String addBinary(String a, String b) {
+        int aLength = a.length();
+        int bLength = b.length();
+        int tmp = 0;
+        int n = aLength > bLength ? aLength : bLength;
+        StringBuilder s = new StringBuilder();
+        // 比较哪个字符串较长, 遍历的次数为较长的字符串长度
+        while(n > 0){
+            n--;
+            char ac = ' ';
+            char bc = ' ';
+            if(aLength > 0) ac = a.charAt(--aLength);
+            if(bLength > 0) bc = b.charAt(--bLength);
+            if(ac == '1') tmp++;
+            if(bc == '1') tmp++;
+            if(tmp % 2 == 1){
+                s.append('1');
+            }else{
+                s.append('0');
+            }
+            tmp /= 2;
+        }
+        if(tmp == 1){
+            s.append('1');
+        }
+        return s.reverse().toString();
+    }
+}
+```
+
