--- a/面试/算法练习.md
+++ b/面试/算法练习.md
@@ -1102,3 +1102,604 @@ class Solution {
 }
 ```
 
+## 17.[x 的平方根](https://leetcode-cn.com/problems/sqrtx/)
+
+**描述**
+
+实现 int sqrt(int x) 函数。
+
+计算并返回 x 的平方根，其中 x 是非负整数。
+
+由于返回类型是整数，结果只保留整数的部分，小数部分将被舍去。
+
+**示例**
+
+示例1
+
+```
+输入: 4
+输出: 2
+```
+
+示例2
+
+```
+输入: 8
+输出: 2
+说明: 8 的平方根是 2.82842..., 
+     由于返回类型是整数，小数部分将被舍去。
+```
+
+**题解**
+
+**Java**
+
+```java
+// 折半查找
+class Solution {
+    public int mySqrt(int x) {
+        int start = 0;
+        int end = x;
+        int result = -1;
+        while(start <= end){
+            int middle = start + (end - start) / 2;
+            if((long)middle * middle <= x){
+                result = middle;
+                start = middle + 1;
+            }else{
+                end = middle - 1;
+            }
+        }
+        return result;
+    }
+}
+```
+
+## 18.[爬楼梯](https://leetcode-cn.com/problems/climbing-stairs/)
+
+**描述**
+
+假设你正在爬楼梯。需要 *n* 阶你才能到达楼顶。
+
+每次你可以爬 1 或 2 个台阶。你有多少种不同的方法可以爬到楼顶呢？
+
+**注意：**给定 *n* 是一个正整数。
+
+**示例**
+
+示例1
+
+```
+输入： 2
+输出： 2
+解释： 有两种方法可以爬到楼顶。
+1.  1 阶 + 1 阶
+2.  2 阶
+```
+
+示例2
+
+```
+输入： 3
+输出： 3
+解释： 有三种方法可以爬到楼顶。
+1.  1 阶 + 1 阶 + 1 阶
+2.  1 阶 + 2 阶
+3.  2 阶 + 1 阶
+```
+
+**题解**
+
+**Java**
+
+```java
+/*
+	动态规划
+	第 n 阶可以由以下两种方法得到：
+    在第 (n-1)阶后向上爬一阶。
+    在第 (n-2) 阶后向上爬 2 阶。
+*/
+class Solution {
+    public int climbStairs(int n) {
+        if(n <= 2){
+            return n;
+        }
+        int[] tmp = new int[n];
+        tmp[0] = 1;
+        tmp[1] = 2;
+        for(int i=2; i<n; i++){
+            tmp[i] = tmp[i-1] + tmp[i-2];
+        }
+        return tmp[n-1];
+    }
+}
+```
+
+## 19.[删除排序链表中的重复元素](https://leetcode-cn.com/problems/remove-duplicates-from-sorted-list/)
+
+**描述**
+
+给定一个排序链表，删除所有重复的元素，使得每个元素只出现一次。
+
+**示例**
+
+示例1
+
+```
+输入: 1->1->2
+输出: 1->2
+```
+
+示例2
+
+```
+输入: 1->1->2->3->3
+输出: 1->2->3
+```
+
+**题解**
+
+**Java**
+
+```java
+ /* Definition for singly-linked list.
+ * public class ListNode {
+ *     int val;
+ *     ListNode next;
+ *     ListNode(int x) { val = x; }
+ * }
+ */
+class Solution {
+    public ListNode deleteDuplicates(ListNode head) {
+        ListNode tmp = head;
+        // 遍历list, 如果与下一个节点相等, 将下下个节点接到当前节点
+        // 如果不等, 指针指向下一个节点正常遍历
+        while(tmp != null && tmp.next != null){
+            if(tmp.val == tmp.next.val){
+                tmp.next = tmp.next.next;
+            }else{
+                tmp = tmp.next;
+            }
+        }
+        return head;
+    }
+}
+```
+
+## 20.[合并两个有序数组](https://leetcode-cn.com/problems/merge-sorted-array/)
+
+**描述**
+
+给你两个有序整数数组 nums1 和 nums2，请你将 nums2 合并到 nums1 中，使 nums1 成为一个有序数组。
+
+**说明:**
+
+初始化 nums1 和 nums2 的元素数量分别为 m 和 n 。
+你可以假设 nums1 有足够的空间（空间大小大于或等于 m + n）来保存 nums2 中的元素。
+
+**示例**
+
+```
+输入:
+nums1 = [1,2,3,0,0,0], m = 3
+nums2 = [2,5,6],       n = 3
+
+输出: [1,2,2,3,5,6]
+```
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    public void merge(int[] nums1, int m, int[] nums2, int n) {
+        int len1 = m - 1;
+        int len2 = n - 1;
+        int len = m + n - 1;
+        while(len1 >= 0 && len2 >= 0) {
+            // 注意--符号在后面，表示先进行计算再减1，这种缩写缩短了代码
+            nums1[len--] = nums1[len1] > nums2[len2] ? nums1[len1--] : nums2[len2--];
+        }
+        // 表示将nums2数组从下标0位置开始，拷贝到nums1数组中，从下标0位置开始，长度为len2+1
+        System.arraycopy(nums2, 0, nums1, 0, len2 + 1);
+    }
+}
+```
+
+## 21.[相同的树](https://leetcode-cn.com/problems/same-tree/)
+
+**描述**
+
+给定两个二叉树，编写一个函数来检验它们是否相同。
+
+如果两个树在结构上相同，并且节点具有相同的值，则认为它们是相同的。
+
+**示例**
+
+示例1
+
+```
+输入:       1         1
+          / \       / \
+         2   3     2   3
+
+        [1,2,3],   [1,2,3]
+
+输出: true
+```
+
+示例2
+
+```
+输入:      1          1
+          /           \
+         2             2
+
+        [1,2],     [1,null,2]
+
+输出: false
+```
+
+示例3
+
+```
+输入:       1         1
+          / \       / \
+         2   1     1   2
+
+        [1,2,1],   [1,1,2]
+
+输出: false
+```
+
+**题解**
+
+**Java**
+
+```java
+/**
+ * Definition for a binary tree node.
+ * public class TreeNode {
+ *     int val;
+ *     TreeNode left;
+ *     TreeNode right;
+ *     TreeNode(int x) { val = x; }
+ * }
+ */
+class Solution {
+    // 递归
+    public boolean isSameTree(TreeNode p, TreeNode q) {
+        // 都为空true
+        if(p == null && q == null){
+            return true;
+        }
+        // 只有一个为空, 返回false
+        if(p == null || q == null){
+            return false;
+        }
+        // 两边值不等, 返回false
+        if(p.val != q.val){
+            return false;
+        }
+        // 左右节点, 都进行递归
+        return isSameTree(p.left, q.left) && isSameTree(p.right, q.right);
+    }
+}
+```
+
+## 22.[对称二叉树](https://leetcode-cn.com/problems/symmetric-tree/)
+
+**描述**
+
+给定一个二叉树，检查它是否是镜像对称的。
+
+**示例**
+
+示例1
+
+```
+例如，二叉树 [1,2,2,3,4,4,3] 是对称的。
+
+    1
+   / \
+  2   2
+ / \ / \
+3  4 4  3
+```
+
+示例2
+
+```
+但是下面这个 [1,2,2,null,3,null,3] 则不是镜像对称的:
+
+    1
+   / \
+  2   2
+   \   \
+   3    3
+```
+
+**题解**
+
+**Java**
+
+```java
+/**
+ * Definition for a binary tree node.
+ * public class TreeNode {
+ *     int val;
+ *     TreeNode left;
+ *     TreeNode right;
+ *     TreeNode(int x) { val = x; }
+ * }
+ */
+class Solution {
+    public boolean isSymmetric(TreeNode root) {
+        if(root == null){
+            return true;
+        }
+        return isEqual(root.left, root.right);
+    }
+	// 递归
+    public boolean isEqual(TreeNode left, TreeNode right){
+        if(left == null && right == null){
+            return true;
+        }
+        if(left == null || right == null){
+            return false;
+        }
+        if(left.val != right.val){
+            return false;
+        }
+        // 交叉对比
+        return isEqual(left.left, right.right) && isEqual(left.right, right.left);
+    }
+}
+```
+
+## 23.[二叉树的最大深度](https://leetcode-cn.com/problems/maximum-depth-of-binary-tree/)
+
+**描述**
+
+给定一个二叉树，找出其最大深度。
+
+二叉树的深度为根节点到最远叶子节点的最长路径上的节点数。
+
+**说明** 
+
+叶子节点是指没有子节点的节点。
+
+**示例**
+
+```
+给定二叉树 [3,9,20,null,null,15,7]，
+
+    3
+   / \
+  9  20
+    /  \
+   15   7
+```
+
+**题解**
+
+**Java**
+
+```java
+/**
+ * Definition for a binary tree node.
+ * public class TreeNode {
+ *     int val;
+ *     TreeNode left;
+ *     TreeNode right;
+ *     TreeNode(int x) { val = x; }
+ * }
+ */
+class Solution {
+  // 递归, 比较左右两边的长度
+  public int maxDepth(TreeNode root) {
+    if(root == null){
+        return 0;
+    }else{
+        int leftLength = maxDepth(root.left);
+        int rigthLength = maxDepth(root.right);
+        return (leftLength > rigthLength ? leftLength : rigthLength) + 1;
+    }
+  }
+}
+```
+
+## 24.[二叉树的层次遍历 II](https://leetcode-cn.com/problems/binary-tree-level-order-traversal-ii/)
+
+**描述**
+
+给定一个二叉树，返回其节点值自底向上的层次遍历。 （即按从叶子节点所在层到根节点所在的层，逐层从左向右遍历）
+
+**示例**
+
+```
+给定二叉树 [3,9,20,null,null,15,7],
+
+    3
+   / \
+  9  20
+    /  \
+   15   7
+   
+返回其自底向上的层次遍历为：
+[
+  [15,7],
+  [9,20],
+  [3]
+]
+```
+
+**题解**
+
+**Java**
+
+```java
+/**
+ * Definition for a binary tree node.
+ * public class TreeNode {
+ *     int val;
+ *     TreeNode left;
+ *     TreeNode right;
+ *     TreeNode(int x) { val = x; }
+ * }
+ */
+class Solution {
+    public List<List<Integer>> levelOrderBottom(TreeNode root) {
+        List<List<Integer>> list = new ArrayList<>();
+        if(root == null){
+            return list;
+        }
+        // 使用队列, 将每个节点都存进队列中, 保证遍历的顺序
+        Queue<TreeNode> queue = new LinkedList<>();
+        queue.add(root);
+        while(!queue.isEmpty()){
+            // 存储每一层的list
+            List<Integer> tmp = new ArrayList<>();
+            // 获取当前队列长度
+            int len = queue.size();
+            // 遍历, 将队列中全部节点取出, 再判断这些节点有没有left, right节点, 如果有再存入队列中
+            // 这样保证, 每一次while循环, 队列中存的的节点都是同一层的节点
+            for(int i=0; i<len; i++){
+                TreeNode t = queue.poll();
+                tmp.add(t.val);
+                if(t.left != null){
+                    queue.add(t.left);
+                }
+                if(t.right != null){
+                    queue.add(t.right);
+                }
+            }
+            // 将list插入到头部
+            list.add(0, tmp);
+        }
+        return list;
+    }
+}
+```
+
+## 25.[将有序数组转换为二叉搜索树](https://leetcode-cn.com/problems/convert-sorted-array-to-binary-search-tree/)
+
+**描述**
+
+将一个按照升序排列的有序数组，转换为一棵高度平衡二叉搜索树。
+
+本题中，一个高度平衡二叉树是指一个二叉树*每个节点* 的左右两个子树的高度差的绝对值不超过 1。
+
+**示例**
+
+```
+给定有序数组: [-10,-3,0,5,9],
+
+一个可能的答案是：[0,-3,9,-10,null,5]，它可以表示下面这个高度平衡二叉搜索树：
+
+      0
+     / \
+   -3   9
+   /   /
+ -10  5
+```
+
+**题解**
+
+**Java**
+
+```java
+/**
+ * Definition for a binary tree node.
+ * public class TreeNode {
+ *     int val;
+ *     TreeNode left;
+ *     TreeNode right;
+ *     TreeNode(int x) { val = x; }
+ * }
+ */
+class Solution {
+    public TreeNode sortedArrayToBST(int[] nums) {
+        return dg(0, nums.length-1, nums);
+    }
+	// 从中间向两边遍历
+    public TreeNode dg(int left, int right, int[] nums){
+        if(left > right) return null;
+        int half = (left + right) / 2;
+        TreeNode node = new TreeNode(nums[half]);
+        node.left = dg(left, half-1, nums);
+        node.right = dg(half+1, right, nums);
+        return node;
+    }
+}
+```
+
+## 26.[平衡二叉树](https://leetcode-cn.com/problems/balanced-binary-tree/)
+
+**描述**
+
+给定一个二叉树，判断它是否是高度平衡的二叉树。
+
+本题中，一棵高度平衡二叉树定义为：
+
+一个二叉树*每个节点* 的左右两个子树的高度差的绝对值不超过1。
+
+**示例**
+
+示例1
+
+```
+给定二叉树 [3,9,20,null,null,15,7]
+
+    3
+   / \
+  9  20
+    /  \
+   15   7
+返回 true 。
+```
+
+示例2
+
+```
+给定二叉树 [1,2,2,3,3,null,null,4,4]
+
+       1
+      / \
+     2   2
+    / \
+   3   3
+  / \
+ 4   4
+返回 false 。
+```
+
+**题解**
+
+**Java**
+
+```java
+/**
+ * Definition for a binary tree node.
+ * public class TreeNode {
+ *     int val;
+ *     TreeNode left;
+ *     TreeNode right;
+ *     TreeNode(int x) { val = x; }
+ * }
+ */
+class Solution {
+    public boolean isBalanced(TreeNode root) {
+        if(root == null) return true;
+        return Math.abs(dg(root.left) - dg(root.right)) < 2 && isBalanced(root.left) && isBalanced(root.right);
+    }
+
+    public int dg(TreeNode root){
+        int tmp = -1;
+        if(root == null) return tmp;
+        return 1 + Math.max(dg(root.left), dg(root.right));
+    }
+}
+```
+
