--- a/面试/算法练习.md
+++ b/面试/算法练习.md
@@ -2,9 +2,9 @@
 
 [力扣（LeetCode）](https://leetcode-cn.com/)
 
-# 简单(1-100)
+# 简单(1-50)
 
-## 1.[两数之和](https://leetcode-cn.com/problems/two-sum) 
+## 1.[两数之和](https://leetcode-cn.com/problems/two-sum) +1
 
 **描述**
 
@@ -49,7 +49,7 @@ class Solution {
 }
 ```
 
-## 2.[整数反转](https://leetcode-cn.com/problems/reverse-integer/)
+## 2.[整数反转](https://leetcode-cn.com/problems/reverse-integer/)  +1
 
 **描述**
 
@@ -133,7 +133,7 @@ class Solution {
 }
 ```
 
-## 3.[回文数](https://leetcode-cn.com/problems/palindrome-number/)
+## 3.[回文数](https://leetcode-cn.com/problems/palindrome-number/) +1
 
 **描述**
 
@@ -180,7 +180,7 @@ class Solution {
         }
         int res = 0;
         // 将数字的一半进行反转
-        // 每循环一次, x缩小一位, res放大一位, x<=0时, 说明已反转一半 
+        // 每循环一次, x缩小一位, res放大一位, x<=res时, 说明已反转一半 
         while(x > res){
             res = res * 10 + x % 10;
             x = x / 10;
