--- a/面试/面试题.md
+++ b/面试/面试题.md
@@ -49,3 +49,82 @@
     - 方法区
     - 堆
   - 直接内存
+
+## 基础
+
+### **String, StringBuffer, StringBuilder**
+
+- **可变性**
+
+  String, StringBuffer, StringBuilder的值都存在Char数组中
+
+  其中String被final修饰, 为常量不可编辑
+
+- **线程安全**
+
+  String为常量是线程安全的
+
+  StringBuffer内部的方法加了synchronized同步锁, 是线程安全的
+
+  StringBuilder非线程安全
+
+- **性能**
+
+  String为常量, 每次修改值, 都要重新更改引用, 性能最低
+
+  StringBuffer加了同步锁, 性能其次
+
+  StringBuilder性能最高
+
+```java
+String a = "a";
+String b = "b";
+String c = a + b  
+// 底层 new StringBuilder().append(a).appned(b).toString();
+```
+
+### 装箱和拆箱
+
+- **手动装箱和拆箱**
+
+  包装类都被final修饰,  不可修改
+
+  **装箱**   Integer a = new Integer(100);
+
+  **拆箱**   a.intValue(); 
+
+- **自动装箱和拆箱**
+
+  **装箱**   Integer a = 100;  底层调用 Integer.valueOf();
+
+  **拆箱**   int b = c;   底层调用 intValue();
+
+- **缓存池**
+
+  数字在 -128 < x < 127 之间会从缓存中取值
+
+  ```java
+  Integer a = 10;
+  Integer b = 10;
+  a == b  // true
+  ```
+
+  ```java
+  Integer a = 250;
+  Integer b = 250;
+  a == b  // false
+  ```
+
+  数字包装类在比较时, 有运算符的情况下, 比的是值
+
+  ```java
+  Integer a = 128;
+  Integer b = 128;
+  Integer c = 127;
+  a == b // false
+  a == c + 1 // true
+  ```
+
+  字符在  0 < x < 127 之间会从缓存中取值
+
+  
