--- a/面试/算法练习.md
+++ b/面试/算法练习.md
@@ -4,7 +4,7 @@
 
 # 简单(1-50)
 
-## 1.[两数之和](https://leetcode-cn.com/problems/two-sum) +1
+## 1.[两数之和](https://leetcode-cn.com/problems/two-sum) +2
 
 **描述**
 
@@ -49,7 +49,7 @@ class Solution {
 }
 ```
 
-## 2.[整数反转](https://leetcode-cn.com/problems/reverse-integer/)  +1
+## 2.[整数反转](https://leetcode-cn.com/problems/reverse-integer/)  +2
 
 **描述**
 
@@ -133,7 +133,7 @@ class Solution {
 }
 ```
 
-## 3.[回文数](https://leetcode-cn.com/problems/palindrome-number/) +1
+## 3.[回文数](https://leetcode-cn.com/problems/palindrome-number/) +2
 
 **描述**
 
@@ -193,7 +193,7 @@ class Solution {
 }
 ```
 
-## 4.[罗马数字转整数](https://leetcode-cn.com/problems/roman-to-integer/)
+## 4.[罗马数字转整数](https://leetcode-cn.com/problems/roman-to-integer/) +1
 
 **描述**
 
@@ -304,7 +304,7 @@ class Solution {
 }
 ```
 
-## 5.[最长公共前缀](https://leetcode-cn.com/problems/longest-common-prefix/)
+## 5.[最长公共前缀](https://leetcode-cn.com/problems/longest-common-prefix/) +1
 
 **描述**
 
@@ -372,7 +372,7 @@ class Solution {
 }
 ```
 
-## 6.[有效的括号](https://leetcode-cn.com/problems/valid-parentheses/)
+## 6.[有效的括号](https://leetcode-cn.com/problems/valid-parentheses/) +1
 
 **描述**
 
@@ -487,7 +487,7 @@ class Solution {
 }
 ```
 
-## 7.[合并两个有序链表](https://leetcode-cn.com/problems/merge-two-sorted-lists)  
+## 7.[合并两个有序链表](https://leetcode-cn.com/problems/merge-two-sorted-lists)  +1
 
 **描述**
 
@@ -536,7 +536,7 @@ class Solution {
 }
 ```
 
-## 8.[删除排序数组中的重复项](https://leetcode-cn.com/problems/remove-duplicates-from-sorted-array/)
+## 8.[删除排序数组中的重复项](https://leetcode-cn.com/problems/remove-duplicates-from-sorted-array/) +1
 
 **描述**
 
@@ -607,7 +607,7 @@ class Solution {
 }
 ```
 
-## 9.[移除元素](https://leetcode-cn.com/problems/remove-element/)
+## 9.[移除元素](https://leetcode-cn.com/problems/remove-element/) +1
 
 **描述**
 
@@ -682,7 +682,7 @@ class Solution {
 }
 ```
 
-## 10.[实现 strStr()](https://leetcode-cn.com/problems/implement-strstr/)
+## 10.[实现 strStr()](https://leetcode-cn.com/problems/implement-strstr/) +1
 
 **描述**
 
