--- a/面试/面试题.md
+++ b/面试/面试题.md
@@ -1,5 +1,3 @@
-
-
 # JVM
 
 ## JVM虚拟机的组成
@@ -150,6 +148,23 @@ java中要操作对象, 必须要先获取该对象的引用, 可通过引用计
 
 分区收集算法, 将堆分为连续的大小不同的小区域, 每个区域都有单独进行内存使用和垃圾回收, 这样做的好处是垃圾回收更灵活, 防止一次回收整个内存堆, 造成系统停顿时间过长, 
 
+## JVM的类加载机制
+
+JVM的类加载分为5个阶段：
+
+- 加载
+
+  jvm读取class文件， 并根据class文件的描述创建java.lang.Class对象的过程
+
+- 验证
+
+  验证class文件符合当前虚拟机的要求， 保障虚拟机自身安全，通过后才会加载
+
+- 准备
+
+- 解析
+
+- 初始化
 
 # 基础
 
@@ -248,3 +263,39 @@ String c = a + b
 - **虚引用**
 
   虚引用通过PhantomReference类实现，虚引用和引用队列联合使用，主要用于跟踪对象的垃圾回收状态。
+
+## 集合
+
+### List
+
+#### ArrayList
+
+基于数组实现， 查询快， 增删慢， 线程不安全
+
+#### Vector
+
+数据结构和ArrayList相同， 不同的是Vector是线程安全的， 操作元素的方法被synchronized修饰， 读写效率低于ArrayList
+
+#### LinkedList
+
+基于双向链表实现， 增删快， 查询慢
+
+### Queue
+
+**ArrayBlockingQueue**：基于数组数据结构实现的有界阻塞队列。
+
+**LinkedBlockingQueue**：基于链表数据结构实现的有界阻塞队列， 不指定容量就是无界队列。
+
+**PriorityBlockingQueue**：支持优先级排序的无界阻塞队列。
+
+**DelayQueue**：支持延迟操作的无界阻塞队列。
+
+**SynchronousQueue**：用于线程同步的阻塞队列。
+
+**LinkedTransferQueue**：基于链表数据结构实现的无界阻塞队列。
+
+**LinkedBlockingDeque**：基于链表数据结构实现的双向阻塞队列。
+
+**ps**: 阻塞队列是指， 如果队列是空， 一个线程要取元素会被阻塞， 直到另一个线程往里添加了元素； 
+
+如果队列是满的， 一个线程往里加元素也会被阻塞， 等待另一个线程取出元素，空出位置。 
