--- a/面试/面试题.md
+++ b/面试/面试题.md
@@ -1,171 +1,3 @@
-# JVM
-
-## JVM虚拟机的组成
-
-- **类加载器子系统**
-
-  类加载器子系统用于将编译好的．Class文件加载到JVM中
-
-- **运行时数据区**
-
-  运行时数据区用于存储在JVM运行过程中产生的数据, 包括
-
-  - 程序计数器
-  - 方法区
-  - 本地方法区
-  - 虚拟机堆
-  - 虚拟机栈
-
-- **执行引擎**
-
-  执行引擎包括
-
-  - 即时编译器
-
-    即时编译器用于将Java字节码文件, 编译成具体的机器码文件
-
-  - 垃圾回收器
-
-    垃圾回收器用于回收在运行过程中不在使用的对象
-
-- **本地接口库**
-
-  本地接口库用于调用操作系统的本地方法库完成具体的指令操作
-
-![JVM组成](../图片/面试/JVM组成.png)
-
-## Java程序的运行过程
-
-- Java源文件被编译为字节码文件
-- JVM将字节码文件编译成相应操作系统的机器码
-- 机器码调用相应操作系统的本地方法库执行相应的
-
-## JVM内存区域
-
-- 线程私有区域
-  - 程序计数器
-  
-    存储java线程所执行的字节码文件的指示器
-  
-  - 虚拟机栈
-  
-    描述java方法执行过程
-  
-  - 本地方法区
-  
-    用于描述native方法执行过程
-  
-- 线程共享区域
-  - 方法区
-  
-    用于存储常量, 静态变量,类信息, 即时编译器编译后的机器码,运行时常量池等数据
-  
-  - 堆
-  
-    用于存储运行时创建的对象和产生的数据
-  
-- 直接内存
-
-## JVM运行时内存
-
-![JVM运行时内存](../图片/面试/JVM运行时内存.png)
-
-- 新生代
-
-  默认占三分之一堆的空间, JVM新创建的对象(除了大对象)会存放在新生代, 由于JVM频繁创建对象, 所以新生代会频繁触发GC进行垃圾回收, 新生代分为eden(伊甸园)区, ServivorTo(幸存者) 区,  ServivorFrom区
-
-  - eden: 新创建的对象会保存在eden中, eden的内存不足会触发, MInorGC, 对新生代进行垃圾回收
-  - ServivorTo: 保留上一次MinorGC的幸村者
-  - ServivorFrom: 将上一次的幸存者, 作为这一次的MinorGC的被扫描者
-
-  MinorGC采用复制算法
-
-  （1）把在Eden区和ServivorFrom区中存活的对象复制到ServivorTo区。如果某对象的年龄达到老年代的标准, 则将其复制到老年代，同时把这些对象的年龄加1；如果ServivorTo区的内存空间不够，则也直接将其复制到老年代；如果对象属于大对象（大小为2KB～128KB的对象属于大对象，则也直接将其复制到老年代。
-
-  （2）清空Eden区和ServivorFrom区中的对象。
-
-  （3）将ServivorTo区和ServivorFrom区互换，原来的ServivorTo区成为下一次GC时的ServivorFrom区。
-
-- 老年代
-
-  老年代主要存放有长生命周期的对象和大对象。老年代的GC过程叫作MajorGC。在老年代，对象比较稳定，MajorGC不会被频繁触发。在进行MajorGC前，JVM会进行一次MinorGC，在MinorGC过后仍然出现老年代空间不足或无法找到足够大的连续空间分配给新创建的大对象时，会触发MajorGC进行垃圾回收，释放JVM的内存空间。
-
-  MajorGC采用标记清除算法，该算法首先会扫描所有对象并标记存活的对象，然后回收未被标记的对象，并释放内存空间。
-
-  因为要先扫描老年代的所有对象再回收，所以MajorGC的耗时较长。MajorGC的标记清除算法容易产生内存碎片。在老年代没有内存空间可分配时，会抛出Out Of Memory异常.
-
-- 永久代
-
-  永久代存放class和meta信息, 超出虚拟机内存会报异常
-
-  Java8之后, 永久代被元空间取代,  元空间直接使用操作系统的内存, 不使用虚拟机内存
-
-# 垃圾回收与算法
-
-![垃圾回收](../图片/面试/垃圾回收.png)
-
-## 确定垃圾
-
-### 引用计数法
-
-java中要操作对象, 必须要先获取该对象的引用, 可通过引用计数法, 判断一个对象是否可以进行回收. 
-
-在为一个对象添加一个引用时, 引用计数+1, 删除一个引用时, 引用计数-1. 当一个对象的引用计数为0, 则表示可以回收
-
-**注**: 引用计数容易产生循环引用问题, 循环引用指, 两个对象互相引用, 导致引用一直存在, 无法被回收 
-
-### 可达性分析
-
-为了解决循环引用的问题, java采用可达性分析来判断对象是否可以被回收.
-
-具体做法先定义一些GC roots对象, 然后以这些GC roots为起点向下搜索, 如果在GC roots与对象之间没有可到达的路径, 则说明这个对象是不可达的, 不可达对象被标记两次后, 仍然不可达, 就会被回收
-
-## 垃圾回收算法
-
-### 标记清除算法
-
-基础算法, 分为标记和清除两个阶段, 在标记阶段, 标记所需要回收的对象, 在清除阶段, 清除标记的对象并释放内存
-
-**注**:   由于标记清除算法,在清理内存后, 没有对内存重新进行整理, 因此如果内存中的小对象居多, 会引起内存碎片化问题, 继而引起大对象无法获得连续可用的空间
-
-### 复制算法
-
-复制算法是为了解决标记清除算法内存碎片化问题而设计的, 将内存划分两块相等的区域, 区域1, 存放新生成的对象, 在区域1存满后, 对区域1中的对象进行标记, 标记存活下来的对象, 复制到区域2中, 为连续的内存, 再对区域1中的对象进行清理.
-
-**注:**  复制法高效, 并易于实现,但浪费内存, 同时, 系统中有大量长时间存活的对象时, 这些对象将在内存区域1和2之间来回复制影响系统效率
-
-### 标记整理算法
-
-结合了标记清除算法和复制算法的优点, 在标记阶段, 和标记清除算法相同, 在标记完成后, 将标记存活的对象移到内存另一端,将存活的放在同一区域, 未存活的放在同一区域, 清除未存活的对象
-
-### 分代收集算法
-
-标记清除散发, 复制算法, 标记整理算法都无法对所有类型的对象进行垃圾回收, 因此, 针对不同的对象采用不用的算法, 该算法时分代收集算法
-
-分代收集算法, 让内存新生代使用复制算法, 因为新生代中有大量的对象被回收, 存活下来被复制的对象较少. 在老年代使用标记整理算法
-
-### 分区收集算法
-
-分区收集算法, 将堆分为连续的大小不同的小区域, 每个区域都有单独进行内存使用和垃圾回收, 这样做的好处是垃圾回收更灵活, 防止一次回收整个内存堆, 造成系统停顿时间过长, 
-
-## JVM的类加载机制
-
-JVM的类加载分为5个阶段：
-
-- 加载
-
-  jvm读取class文件， 并根据class文件的描述创建java.lang.Class对象的过程
-
-- 验证
-
-  验证class文件符合当前虚拟机的要求， 保障虚拟机自身安全，通过后才会加载
-
-- 准备
-
-- 解析
-
-- 初始化
-
 # 基础
 
 ## **String, StringBuffer, StringBuilder**
@@ -268,19 +100,21 @@ String c = a + b
 
 ### List
 
-#### ArrayList
+**ArrayList**
 
 基于数组实现， 查询快， 增删慢， 线程不安全
 
-#### Vector
+**Vector**
 
 数据结构和ArrayList相同， 不同的是Vector是线程安全的， 操作元素的方法被synchronized修饰， 读写效率低于ArrayList
 
-#### LinkedList
+**LinkedList**
 
 基于双向链表实现， 增删快， 查询慢
 
 ### Queue
+
+队列
 
 **ArrayBlockingQueue**：基于数组数据结构实现的有界阻塞队列。
 
@@ -290,12 +124,460 @@ String c = a + b
 
 **DelayQueue**：支持延迟操作的无界阻塞队列。
 
-**SynchronousQueue**：用于线程同步的阻塞队列。
+**SynchronousQueue**：用于线程同步的阻塞队列。只能存一个元素
 
-**LinkedTransferQueue**：基于链表数据结构实现的无界阻塞队列。
+**LinkedTransferQueue**：基于链表数据结构实现的无界阻塞队列。当队列中无元素时, 消费线程取元素, 队列会生成一个空节点, 消费线程等待这个节点, 后面生产线程要加入队列时, 发现空节点, 就不入队, 直接填充到空节点上, 唤醒消费线程消费.相对于LinkedBlockingQueue效率更高.
 
 **LinkedBlockingDeque**：基于链表数据结构实现的双向阻塞队列。
 
 **ps**: 阻塞队列是指， 如果队列是空， 一个线程要取元素会被阻塞， 直到另一个线程往里添加了元素； 
 
 如果队列是满的， 一个线程往里加元素也会被阻塞， 等待另一个线程取出元素，空出位置。 
+
+### Set
+
+Set存储的集合数据不会重复
+
+**HashSet**: 无序
+
+HashSet存放散列值, 按照元素的散列值来存取元素, 散列值通过元素的hashCode方法计算得到.  HashSet在存放元素会先比较元素的散列值是否相等, 如果散列值相等, 再通过equals比较, 都相等视为同一元素
+
+**TreeSet**: 有序
+
+TreeSet基于二叉树的原理, 对新添加的对象进行排序
+
+Integer和String等基础对象可以直接排序,  自定义的数据类型需要实现Comparable接口, 重写其中的compareTo函数才能排序
+
+**LinkedHashSet**:  有序
+
+LinkedHashSet在底层使用LinkedHashMap存储元素, 继承了HashSet
+
+### Map
+
+**HashMap**:  数组+链表/红黑树,  线程不安全
+
+HashMap基于键的HashCode值为唯一标识,  进行存取.  每次遍历的顺序无法保证相同, key和value允许为null
+
+**ConcurrentHashMap:**   分段锁实现,  线程安全
+
+ConcurrentHashMap由多个Segment组成,  每个Segment单独加锁, 默认16个, 就可以同时支持16个线程并发执行写操作
+
+**HashTable:**  线程安全
+
+操作与HashMap类似, 是线程安全,  但是同一时间只能有一个线程可写入,  并发性不如ConcurrentHashMap
+
+**TreeMap**:  有序
+
+TreeMap基于二叉树数据结构, 存储数据,   使用TreeMap时其key必须实现Comparable接口或采用自定义的比较器
+
+**LinkedHashMap**:   有序
+
+基于HashTable数据结构, 其内部使用链表保存元素的插入顺序
+
+## 异常
+
+Throwable是所有错误或异常的父类,  Throwable又可分为Error和Exception, 
+
+Error指java程序运行错误, 出现Error的原因通常是因为系统内部错误, 或资源耗尽, 无法处理, 系统只能记录错误的成因和安全终止 
+
+Exception指程序运行时异常,即运行中的程序发生了人们不可期望的事件, 
+
+### 异常处理方式
+
+#### 抛出异常
+
+将异常抛出给调用者, 调用者根据情况处理
+
+throws在方法上定义要抛出得异常
+
+throw手动抛出一个异常
+
+#### 捕获异常
+
+try catch
+
+## 反射机制
+
+### 反射的步骤
+
+1. 获取想要操作的类的Class对象, 该Class对象是反射的核心, 通过它可以调用类的任意方法
+
+   获取Class对象的三种方法
+
+   - 调用对象的getClass方法
+
+     ```java
+     Person person = new Person();
+     Class clazz = person.getClass();
+     ```
+
+   - 调用某个类的class属性
+
+     ```java
+     Class clazz = Person.class;
+     ```
+
+   - 调用Class类中的forName静态方法,  最安全, 性能最好
+
+     ```java
+     Class clazz = Class.forName("包名.类名");
+     ```
+
+2. 调用Class对象所对应的类中定义的方法, 这是反射的使用阶段
+
+3. 使用反射API来获取并调用类的属性和方法信息
+
+   获取类的所有方法的信息
+
+   ```java
+   Method[] method = clazz.getDeclaredMethods();
+   ```
+
+   获取类所有成员的属性信息
+
+   ```java
+   Field[] field = clazz.getDeclaredFields();
+   ```
+
+   获取类所有构造方法的信息
+
+   ```java
+   Constructor[] constructor = clazz.getDeclaredConstructors();
+   ```
+
+### 创建对象
+
+- 使用Class对象的newInstanse方法创建Class对象对应类的实例,  这种方法要求该Class对象对应的类有默认的空构造器
+
+  ```java
+  Class clazz = Class.forName("Person");
+  Person p = clazz.newInstance();
+  ```
+
+- 先获取构造方法, 使用构造方法创建对象
+
+  ```java
+  Constructor c = clazz.getDeclaredConstructor(int.class, String,class);
+  Person p = (Person)c.newInstance("老王", 20);
+  ```
+
+### 调用方法
+
+获取对象的Method,  然后通过invoke方法调用
+
+```java
+Class clazz = Class.forName("Person");
+// setName是方法名, String是该方法的参数类型, 有几个写几个
+Method method = clazz.getMethod("setName", String.class);
+Person p = clazz.newInstance();
+method.invoke(p, "老王");
+```
+
+## 内部类
+
+### 静态内部类
+
+定义在类内部的静态类被称为静态内部类,  静态内部类可以访问外部类的静态变量和方法,在静态内部类中可定义静态变量, 方法, 构造函数等; 静态内部类通过 "外部类. 静态内部类"的方式调用.
+
+### 成员内部类
+
+定义在类内部的非静态类叫做成员内部类,  成员内部类不能定义静态方法和变量(final修饰除外)
+
+### 局部内部类
+
+定义在方法中的类叫做局部内部类, 当一个类只需要在某个方法中使用某个特定的类时, 可以通过局部内部类来优雅的实现
+
+### 匿名内部类
+
+匿名内部类指通过继承一个父类或者实现一个接口的方式, 直接定义并使用的类,. 匿名类在使用时, 直接new生成一个对象, 在对象中重写方法.
+
+## 泛型
+
+用于约束参数类型, 提供了编译时类型的安全检测机制
+
+### 泛型方法
+
+```java
+public class Main {
+    public static void main(String[] args) {
+        Main m = new Main();
+        m.doSome(10, "老王");
+    }
+    public < T > void doSome(T ... array){
+        for(T item: array){
+            if(item instanceof Integer){
+                System.out.println("数字");
+            }else if(item instanceof String){
+                System.out.println("字符串");
+            }
+        }
+    }
+}
+```
+
+### 泛型类
+
+在类上定义一个或多个类型参数, 该参数在类实例化时传入, 类内部会将该参数作为数据类型使用
+
+```java
+public class Main<T, Q, M> {
+    private T t;
+    private Q q;
+    private M m;
+    public void set(T t, Q q, M m){
+        this.t = t;
+        this.q = q;
+        this.m = m;
+    }
+    public void print(){
+        System.out.println(t);
+        System.out.println(q);
+        System.out.println(m);
+    }
+    public static void main(String[] args) {
+        Main<Integer, String, Double> m = new Main();
+        m.set(1, "老王", 1.2);
+        m.print();
+    }
+}
+```
+
+### 泛型接口
+
+用法与泛型类类似,  类在实现接口时, 指定接口的泛型
+
+```java
+public interface Api<T>{
+	public T print();
+}
+public class ApiImpl implements Api<Integer>{
+	public Integer print(){
+       // todo
+    }
+}
+```
+
+### 类型擦除
+
+泛型在编译阶段, 会被编译器编译时去掉
+
+## 序列化
+
+序列化的作用是让Java对象及其状态在多个应用之间传递, 共享, 或者将对象及其状态持久化, 在其他地方重新读取被保存的对象, 并继续进行处理
+
+常用于RPC远程调用, 网络传输
+
+### 序列化API使用
+
+注意事项
+
+- 要实现序列化, 只需要实现java.io.Serializable接口即可
+- 序列化和反序列化必须保持序列化的ID一致,   一般使用private staic final long serialVersionUID定义序列化ID
+- 序列化并不保存静态变量
+- 在需要序列化父类变量时, 父类也需要实现Serializable接口
+- 使用Transient关键字可以阻止该变量被序列化, 在被反序列化后，transient变量的值被设为对应类型的初始值，例如，int类型变量的值是0，对象类型变量的值是null。
+
+# JVM
+
+## JVM虚拟机的组成
+
+- **类加载器子系统**
+
+  类加载器子系统用于将编译好的．Class文件加载到JVM中
+
+- **运行时数据区**
+
+  运行时数据区用于存储在JVM运行过程中产生的数据, 包括
+
+  - 程序计数器
+  - 方法区
+  - 本地方法区
+  - 虚拟机堆
+  - 虚拟机栈
+
+- **执行引擎**
+
+  执行引擎包括
+
+  - 即时编译器
+
+    即时编译器用于将Java字节码文件, 编译成具体的机器码文件
+
+  - 垃圾回收器
+
+    垃圾回收器用于回收在运行过程中不在使用的对象
+
+- **本地接口库**
+
+  本地接口库用于调用操作系统的本地方法库完成具体的指令操作
+
+![JVM组成](../图片/面试/JVM组成.png)
+
+## Java程序的运行过程
+
+- Java源文件被编译为字节码文件
+- JVM将字节码文件编译成相应操作系统的机器码
+- 机器码调用相应操作系统的本地方法库执行相应的
+
+## JVM内存区域
+
+- 线程私有区域
+
+  - 程序计数器
+
+    存储java线程所执行的字节码文件的指示器
+
+  - 虚拟机栈
+
+    描述java方法执行过程
+
+  - 本地方法区
+
+    用于描述native方法执行过程
+
+- 线程共享区域
+
+  - 方法区
+
+    用于存储常量, 静态变量,类信息, 即时编译器编译后的机器码,运行时常量池等数据
+
+  - 堆
+
+    用于存储运行时创建的对象和产生的数据
+
+- 直接内存
+
+## JVM运行时内存
+
+![JVM运行时内存](../图片/面试/JVM运行时内存.png)
+
+- 新生代
+
+  默认占三分之一堆的空间, JVM新创建的对象(除了大对象)会存放在新生代, 由于JVM频繁创建对象, 所以新生代会频繁触发GC进行垃圾回收, 新生代分为eden(伊甸园)区, ServivorTo(幸存者) 区,  ServivorFrom区
+
+  - eden: 新创建的对象会保存在eden中, eden的内存不足会触发, MInorGC, 对新生代进行垃圾回收
+  - ServivorTo: 保留上一次MinorGC的幸村者
+  - ServivorFrom: 将上一次的幸存者, 作为这一次的MinorGC的被扫描者
+
+  MinorGC采用复制算法
+
+  （1）把在Eden区和ServivorFrom区中存活的对象复制到ServivorTo区。如果某对象的年龄达到老年代的标准, 则将其复制到老年代，同时把这些对象的年龄加1；如果ServivorTo区的内存空间不够，则也直接将其复制到老年代；如果对象属于大对象（大小为2KB～128KB的对象属于大对象，则也直接将其复制到老年代。
+
+  （2）清空Eden区和ServivorFrom区中的对象。
+
+  （3）将ServivorTo区和ServivorFrom区互换，原来的ServivorTo区成为下一次GC时的ServivorFrom区。
+
+- 老年代
+
+  老年代主要存放有长生命周期的对象和大对象。老年代的GC过程叫作MajorGC。在老年代，对象比较稳定，MajorGC不会被频繁触发。在进行MajorGC前，JVM会进行一次MinorGC，在MinorGC过后仍然出现老年代空间不足或无法找到足够大的连续空间分配给新创建的大对象时，会触发MajorGC进行垃圾回收，释放JVM的内存空间。
+
+  MajorGC采用标记清除算法，该算法首先会扫描所有对象并标记存活的对象，然后回收未被标记的对象，并释放内存空间。
+
+  因为要先扫描老年代的所有对象再回收，所以MajorGC的耗时较长。MajorGC的标记清除算法容易产生内存碎片。在老年代没有内存空间可分配时，会抛出Out Of Memory异常.
+
+- 永久代
+
+  永久代存放class和meta信息, 超出虚拟机内存会报异常
+
+  Java8之后, 永久代被元空间取代,  元空间直接使用操作系统的内存, 不使用虚拟机内存
+
+# 垃圾回收与算法
+
+![垃圾回收](../图片/面试/垃圾回收.png)
+
+## 确定垃圾
+
+### 引用计数法
+
+java中要操作对象, 必须要先获取该对象的引用, 可通过引用计数法, 判断一个对象是否可以进行回收. 
+
+在为一个对象添加一个引用时, 引用计数+1, 删除一个引用时, 引用计数-1. 当一个对象的引用计数为0, 则表示可以回收
+
+**注**: 引用计数容易产生循环引用问题, 循环引用指, 两个对象互相引用, 导致引用一直存在, 无法被回收 
+
+### 可达性分析
+
+为了解决循环引用的问题, java采用可达性分析来判断对象是否可以被回收.
+
+具体做法先定义一些GC roots对象, 然后以这些GC roots为起点向下搜索, 如果在GC roots与对象之间没有可到达的路径, 则说明这个对象是不可达的, 不可达对象被标记两次后, 仍然不可达, 就会被回收
+
+## 垃圾回收算法
+
+### 标记清除算法
+
+基础算法, 分为标记和清除两个阶段, 在标记阶段, 标记所需要回收的对象, 在清除阶段, 清除标记的对象并释放内存
+
+**注**:   由于标记清除算法,在清理内存后, 没有对内存重新进行整理, 因此如果内存中的小对象居多, 会引起内存碎片化问题, 继而引起大对象无法获得连续可用的空间
+
+### 复制算法
+
+复制算法是为了解决标记清除算法内存碎片化问题而设计的, 将内存划分两块相等的区域, 区域1, 存放新生成的对象, 在区域1存满后, 对区域1中的对象进行标记, 标记存活下来的对象, 复制到区域2中, 为连续的内存, 再对区域1中的对象进行清理.
+
+**注:**  复制法高效, 并易于实现,但浪费内存, 同时, 系统中有大量长时间存活的对象时, 这些对象将在内存区域1和2之间来回复制影响系统效率
+
+### 标记整理算法
+
+结合了标记清除算法和复制算法的优点, 在标记阶段, 和标记清除算法相同, 在标记完成后, 将标记存活的对象移到内存另一端,将存活的放在同一区域, 未存活的放在同一区域, 清除未存活的对象
+
+### 分代收集算法
+
+标记清除散发, 复制算法, 标记整理算法都无法对所有类型的对象进行垃圾回收, 因此, 针对不同的对象采用不用的算法, 该算法时分代收集算法
+
+分代收集算法, 让内存新生代使用复制算法, 因为新生代中有大量的对象被回收, 存活下来被复制的对象较少. 在老年代使用标记整理算法
+
+### 分区收集算法
+
+分区收集算法, 将堆分为连续的大小不同的小区域, 每个区域都有单独进行内存使用和垃圾回收, 这样做的好处是垃圾回收更灵活, 防止一次回收整个内存堆, 造成系统停顿时间过长, 
+
+## JVM的类加载机制
+
+JVM的类加载分为5个阶段：
+
+- 加载
+
+  jvm读取class文件， 并根据class文件的描述创建java.lang.Class对象的过程
+
+- 验证
+
+  验证class文件符合当前虚拟机的要求， 保障虚拟机自身安全，通过后才会加载
+
+- 准备
+
+- 解析
+
+- 初始化
+
+# 并发
+
+## 线程的创建方式
+
+### 继承Thread类
+
+```java
+public class Main extends Thread{
+    public static void main(String[] args) {
+        Main m = new Main();
+        m.start();
+    }
+    public void run(){
+        System.out.println("lalalal...");
+    }
+}
+```
+
+### 实现Runnable接口
+
+```java
+public class Main implements Runnable{
+    public static void main(String[] args) {
+        Main m = new Main();
+        Thread thread = new Thread(m);
+        thread.start();
+    }
+    public void run(){
+        System.out.println("jijiji...");
+    }
+}
+```
+
+通过
