--- a/面试/面试题.md
+++ b/面试/面试题.md
@@ -580,4 +580,60 @@ public class Main implements Runnable{
 }
 ```
 
-通过
+### 通过ExecutorService和Callable<Class>实现有返回值的线程
+
+当需要开启多个线程执行同一个任务, 并收集各个线程执行的返回结果, 需要用的Callable接口.
+
+```java
+public class Main implements Callable<String> {
+    private String name;
+    public Main(String name){
+        this.name = name;
+    }
+    @Override
+    public String call() throws Exception {
+        return name;
+    }
+    public static void main(String[] args) throws ExecutionException, InterruptedException {
+        ExecutorService pool = Executors.newFixedThreadPool(5);
+        List<Future> list = new ArrayList<>();
+        for (int i=0; i<5; i++){
+            Callable c = new Main(i + "");
+            // pool.submit 提交指定的任务去执行, 并且返回Future对象
+            // Future表示一个可能还没有完成的异步任务结果
+            Future future = pool.submit(c);
+            System.out.println("submit a callable thread:" + i);
+            list.add(future);
+        }
+        for (Future f : list){
+            // get方法让我们等待Calable结束, 并获取执行的结果
+            System.out.println(f.get().toString());
+        }
+        pool.shutdown();
+    }
+}
+```
+
+### 基于线程池
+
+```java
+public class Main implements Runnable {
+    public static void main(String[] args) throws ExecutionException, InterruptedException {
+        // 创建线程池
+        ExecutorService pool = Executors.newFixedThreadPool(10);
+        for (int i=0; i<10; i++){
+            pool.execute(new Main() {
+                @Override
+                public void run() {
+                    System.out.println(Thread.currentThread().getName() + " is running");
+                }
+            });
+        }
+    }
+    @Override
+    public void run() {}
+}
+```
+
+### 线程池工作原理
+
